Changelog
=========


1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2016-10-04)
------------------

- Support configuration of absolute sitemap urls. [jone]

- Slow down on too many requests. [jone]


1.0 (2015-11-09)
----------------

- Initial implementation.
  [lgraf]