@@ -15,6 +15,11 @@ def get_config(options):
         config.tika = options.tika
     if options.solr:
         config.solr = options.solr
+    # Command line options for SlackToken & SlackChannel override config values
+    if options.slacktoken:
+        config.slacktoken = options.slacktoken
+    if options.slackchannel:
+        config.slackchannel = options.slackchannel
 
     if not (config.tika and config.solr):
         raise ValueError(
@@ -27,7 +32,8 @@ def get_config(options):
 class Config(object):
 
     def __init__(self, sites, unique_field, url_field, last_modified_field,
-                 fields, tika=None, solr=None):
+                 fields, tika=None, solr=None,
+                 slacktoken=None, slackchannel=None):
         self.sites = sites
         self.unique_field = unique_field
         self.url_field = url_field
@@ -35,6 +41,8 @@ class Config(object):
         self.fields = fields
         self.tika = tika
         self.solr = solr
+        self.slacktoken = slacktoken
+        self.slackchannel = slackchannel
 
         for site in self.sites:
             site.bind(self)
