@@ -20,6 +20,7 @@ pep8 = 1.6.2
 pyasn1 = 0.1.9
 pyflakes = 1.0.0
 requests = 2.8.1
+slacker = 0.9.30
 testfixtures = 4.10.1
 unittest2 = 1.1.0
 z3c.dependencychecker = 1.15
