@@ -5,7 +5,8 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Support Slack notifications.
+  [raphael-s]
 
 
 1.1.0 (2016-10-04)
